HR added to onscreen page to ensure correct placement on mobile, tablet and desktop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,12 +146,11 @@ header {
     overflow: hidden;
 }
 
-/*Media Page*/
+/*On-Screen Page*/
 
 #media-blurb {
     margin-top: 10px;
 }
-
 
 .line {
     display: none;
@@ -171,6 +170,10 @@ header {
 
 .actress {
     height: 330px;
+}
+
+.alt-hr {
+    display: none;
 }
 
 /*Video*/
